--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </li>
         <li class="mb-4"><p class="h5"><strong><mark>/장소</mark></strong></p>장소 기능의 시동명령입니다. '/'를 앞에 붙여야합니다.</li>
         <li class="mb-4"><p class="h5"><strong><mark>정기 or 추가</mark></strong></p>
+            <p>/장소 이후 한 칸을 띄우고 작성합니다.</p>
             <p>'정기'는 장소의 정기신청에, '추가'는 장소의 추가신청에 사용합니다.</p>
             <p>어떤 주차의 정기/추가신청인지는 전적으로 신청시점에 따라 결정됩니다.</p>
             <p>정기신청은 실제 업무주의 전전주 목요일 09::00부터 업무 전주 목요일 09:00까지 가능합니다.</p>
