add help menu text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
         <li class="mb-4"><p class="h5"><strong><mark>/장소 정기or추가/Charity/CT/SEB/사이트명/행정구역</mark></strong></p>형식으로 장소를 신청합니다.
             <p><em>ex) /장소 정기/MSF/C/S/서울스퀘어/서울 중구 회현동</em></p>
         </li>
-        <li class="mb-4"><p class="h5"><strong><mark>/장소</mark></strong></p>장소 기능의 시동명령입니다. '/'를 앞에 붙여야합니다.</li>
+        <li class="mb-4">
+            <p class="h5"><strong><mark>/장소</mark></strong></p>
+            <p>장소 기능의 시동명령입니다. '/'를 앞에 붙여야합니다.</p>
+            <p>'/장소'만 입력하면 도움말이 표시됩니다.</p>
+        </li>
         <li class="mb-4"><p class="h5"><strong><mark>정기 or 추가</mark></strong></p>
             <p>/장소 이후 한 칸을 띄우고 작성합니다.</p>
             <p>'정기'는 장소의 정기신청에, '추가'는 장소의 추가신청에 사용합니다.</p>
