correct typo, add README.md

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p>/장소 이후 한 칸을 띄우고 작성합니다.</p>
             <p>'정기'는 장소의 정기신청에, '추가'는 장소의 추가신청에 사용합니다.</p>
             <p>어떤 주차의 정기/추가신청인지는 전적으로 신청시점에 따라 결정됩니다.</p>
-            <p>정기신청은 실제 업무주의 전전주 목요일 09::00부터 업무 전주 목요일 09:00까지 가능합니다.</p>
+            <p>정기신청은 실제 업무주의 전전주 목요일 09:00부터 업무 전주 목요일 09:00까지 가능합니다.</p>
             <p class="badge bg-primary text-wrap">* 업무 전주 목요일 09:00이후의 정기신청은 2주 후의 정기신청으로 처리됩니다.</p>
             <p>추가신청은 업무 전주 일요일 자정부터 업무주 토요일 24:00까지 가능합니다.</p>
             <p>다른 팀이 신청한 장소는 신청할 수 없습니다.</p>
