--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="프로젝트엔 장소 신청 설명서"> 
+    <meta property="og:title" content="프로젝트엔 장소 신청 설명서"/> 
     <meta property="og:description" content="이곳에서 장소 신청 사용법을 볼 수 있습니다."/>
-    <meta property="og:image" content="https://https://wjpark11.github.io/pn_location_manual/pn_ci_img06.png">
+    <meta property="og:image" content="https://https://wjpark11.github.io/pn_location_manual/pn_ci_img06.png"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <title>PROJECT-N 장소신청</title>
