alter address to gibun

--- a/index.html
+++ b/index.html
@@ -55,12 +55,10 @@
         </li>
         <li class="mb-4">
             <p class="h5"><strong><mark>행정구역</mark></strong></p>
-            <p>신청 장소의 행정구역명을 읍/면/동 단위까지 입력합니다.</p>
-            <p>정확한 행정구역명을 입력해야 합니다.</p>
-            <p>띄어쓰기는 신경쓰지 않아도 됩니다.</p>
-            <p>번호로 구분된 동의 경우 번호는 제외하고 입력하여도 됩니다.</p>
-            <p><small>ex) 상계1동 -> 상계동</small></p>
-            <p>행정구역명 목록은 다음과 같습니다.</p>
+            <p>신청 장소의 지번명을 읍/면/동 단위까지 입력합니다.</p>
+            <p>정확한 지번명을 입력해야 합니다. (카카오맵의 검색결과의 지번을 참고)</p>
+            <p>띄어쓰기는 신경쓰지 않아도 됩니다.</p>            
+            <p>지번명 목록은 다음과 같습니다.</p>
             
             <div class="row">
                 <div class="column col-sm-2 mb-4">            
