--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="프로젝트엔 장소 신청 설명서" />
-    <meta property="og:description" content="이곳에서 장소 신청 사용법을 볼 수 있습니다." />
+    <meta property="og:title" content="프로젝트엔 잔디 웹훅 설명서" />
+    <meta property="og:description" content="이곳에서 잔디 웹훅 사용법을 볼 수 있습니다." />
     <meta property="og:image" content="https://https://wjpark11.github.io/pn_location_manual/pn_ci_img06.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -146,7 +146,7 @@
                 <ul>
                     <li class="mb-4">
                         <p class="h5"><strong><mark>/성과 등록/이름/기구/금액/구분/메모</mark></strong></p>형식으로 사인업을 등록합니다.
-                        <p><em>ex) /성과 등록/홍길동/msf/2만/정기/9챔 🔥🔥🔥🔥🔥🔥🔥🔥🔥</em></p>
+                        <p><em>ex) /성과 등록/김프엔/msf/2만/정기/9챔 🔥🔥🔥🔥🔥🔥🔥🔥🔥</em></p>
                     </li>
                     <li class="mb-4">
                         <p class="h5"><strong><mark>/성과</mark></strong></p>
@@ -189,7 +189,7 @@
                 <h3 class="mb-5">성과조회</h3>
                 <ul>
                     <li class="mb-4">
-                        <p class="h5"><strong><mark>/성과 조회</mark></strong></p>명령으로 그날의 사인업 현황을 조회합니다.
+                        <p class="h5"><strong><mark>/성과 조회</mark></strong></p>명령으로 당일의 사인업 현황을 조회합니다.
                         <p><em>ex) /성과 조회</em></p>
                         <p>당일의 성과만 조회할 수 있습니다.</p>
                         <p>성과 조회 시 각 항목의 일련번호 옆의 괄호 안에 있는 번호는 성과 수정/삭제 시 사용하는 <strong>등록번호</strong>입니다.</p>
@@ -239,7 +239,7 @@
                         <p class="h5"><strong><mark>등록번호</mark></strong></p>
                         <p>성과 조회 시 각 항목의 일련번호 옆의 괄호 안에 있는 번호입니다.</p>                        
                         <p>삭제할 성과의 등록번호를 입력합니다.</p>
-                        <p>내가 등록하지 않은 성과도 삭제 가능하므로 수정 전 충분히 주의를 기울여야 합니다.</p>
+                        <p>내가 등록하지 않은 성과도 삭제 가능하므로 삭제 전 충분히 주의를 기울여야 합니다.</p>
                     </li>                    
                 </ul>
             </div>
