add search by charity to location manual

--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
                     <li class="mb-4">
                         <p class="h5"><strong><mark>/장소 조회</mark></strong></p>명령으로 신청/승인 현황을 조회합니다.
                     </li>
+                    <li class="mb-4">
+                        <p class="h5"><strong><mark>/장소 조회/Charity</mark></strong></p>명령으로 기구별 신청/승인 현황을 조회합니다.
+                    </li>
                     <li class="mb-4">각 주차별 우리팀이 신청한 장소와 승인현황이 조회됩니다.</li>
                     <li class="mb-4">각 항목의 마지막에 나타나는 숫자는 신청장소 삭제시에 쓰이는 장소번호입니다.</li>
                 </ul>
