add manual item 'slogan'

--- a/index.html
+++ b/index.html
@@ -179,11 +179,12 @@
                     </li>
                     <li class="mb-4">
                         <p class="h5"><strong><mark>구분</mark></strong></p>                        
-                        <p>사인업의 종류에 따라 정기, 계보, 카보, 선물, 파기 중 하나를 입력합니다.</p>
+                        <p>사인업의 종류에 따라 정기, 보류, 선물, 파기 중 하나를 입력합니다.</p>
                     </li>
                     <li class="mb-4">
                         <p class="h5"><strong><mark>메모</mark></strong></p>                        
                         <p>붙일 내용을 자유롭게 입력합니다. 이모티콘 가능</p>
+                        <p>메모가 없더라도 /는 입력되어야 합니다.</p>
                     </li>
                 </ul>
 
@@ -243,6 +244,18 @@
                         <p>성과 조회 시 각 항목의 일련번호 옆의 괄호 안에 있는 번호입니다.</p>                        
                         <p>삭제할 성과의 등록번호를 입력합니다.</p>
                         <p>내가 등록하지 않은 성과도 삭제 가능하므로 삭제 전 충분히 주의를 기울여야 합니다.</p>
+                    </li>                    
+                </ul>
+
+                <hr>
+
+                <h3 class="mb-5">슬로건</h3>
+                <ul>
+                    <li class="mb-4">
+                        <p class="h5"><strong><mark>/성과 슬로건/슬로건내용</mark></strong></p>명령으로 당일의 슬로건을 등록/수정합니다.
+                        <p><em>ex) /성과 슬로건/오늘도 열심히🔥🔥</em></p>
+                        <p>당일의 슬로건만 등록/수정할 수 있습니다.</p>
+                        <p>첫 사인업이 나온 멤버만 명령어를 사용하도록 합시다.</p>
                     </li>                    
                 </ul>
             </div>
